SS - Cleanup, fix jakarta jaxb, correct some tests.